# simple-pypi

./: .gitignore  README.md  pyproject.toml
simple_pypi/: cli.py  core.py  index.py
