[tool.poetry]
name = "simple-pypi"
version = "0.1.0"
description = "Create and manage Python package indexes conforming to the Simple Repository API (PEP 503)."
authors = ["Max Crone <code@maxcrone.org>"]
readme = "README.md"
packages = [{include = "simple_pypi"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
simple-pypi = "simple_pypi.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
